Made a working data base and migration files, so should be ready to go on the methods and stuff

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,2 @@
-development:
-  adapter: sqlite3
-  database: db/development.db 
-  pool: 5
-  timeout: 5000
+adapter: 'sqlite3'
+database: 'db/knightsjourney.sqlite3'
